--- a/tech-documentation/style.css
+++ b/tech-documentation/style.css
@@ -4,36 +4,39 @@
 }
 
 body {
-    position: absolute;
     font-family: sans-serif;
+    color: rgb(239, 239, 240);
 }
 
 #navbar {
     position: fixed;
-    height: 7em;
+    top: 0;
     width: 100%;
-    background-color: rgb(142, 156, 236);
+    background-color: rgb(203, 208, 224);
 }
 
 nav header {
-    height: 4em;
     text-align: center;
 }
 
 nav h1 {
-    padding-top: .75em;
+    padding: .5em;
+    font-size: 2em;
 }
 
 nav p {
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
+    text-align: center;
+}
+
+a {
+    display: inline-block;
+    text-decoration: none;
 }
 
 .nav-link {
-    font-size: 1.2em;
+    font-size: 1em;
+    margin: .5em;
     text-align: center;
-    text-decoration: none;
     color: rgb(29, 70, 94);
 }
 
@@ -41,30 +44,41 @@ nav p {
     color: rgb(231, 228, 53);
 }
 
-.nav-link:visited {
-    color: rebeccapurple;
+h2,
+main {
+    text-shadow: 1px 2px 3px #000000;
 }
 
 main {
-     margin-top: 7em;
- }
+     margin-top: 4em;
+     background-image: url(sliced-meats-on-wooden-chopping-board-1927383.jpg);
+     background-position: center;
+}
 
 h2 {
     padding: .5em;
+    text-align: center;
 }
 
 .main-section {
-    padding: .5em;
-
+    padding: 4em .25em;
 }
 
-main p, ul, blockquote {
-    margin: 1em;
+main p, 
+ul,
+blockquote {
+    margin: auto;
     padding: .75em;
+    width: 75%;
 }
 
 li {
     list-style-type: none;
+}
+
+footer {
+    color: black;
+    text-align: center;
 }
 
 @media (min-width: 768px) {
@@ -77,12 +91,30 @@ li {
 }
 
 @media (min-width: 1024px) {
-    main {
-        padding: 2em;
+    #navbar {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        height: 100%;
+        width: 12em;
+        overflow: auto;
+    }
+    nav p {
+         display: flex;
+         flex-direction: column;
+     }
+
+    main,
+    footer {
+        margin: 0 0 0 12em;
     }
 }
 
-@media (min-width: 1024px) {
+@media (min-width: 1440px) {
+    html {
+        font-size: 24px;
+    }
+
     main {
         padding: 3em;
     }
