--- a/tech-documentation/style.css
+++ b/tech-documentation/style.css
@@ -13,6 +13,7 @@ body {
     top: 0;
     width: 100%;
     background-color: rgb(203, 208, 224);
+    z-index: 1;
 }
 
 nav header {
@@ -61,6 +62,9 @@ h2 {
 }
 
 .main-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     padding: 4em .25em;
 }
 
@@ -74,6 +78,17 @@ blockquote {
 
 li {
     list-style-type: none;
+}
+
+img {
+    margin-top: 1.5em;
+    border: 3px solid;
+    width: 50%;
+}
+
+video {
+    margin-top: 1em;
+    z-index: 0;
 }
 
 footer {
